--- a/05/1_instalacao_handle/views/home.handlebars
+++ b/05/1_instalacao_handle/views/home.handlebars
@@ -4,4 +4,6 @@
 
 {{#if auth}}
 <p> Você está autenticado no sistema, <a href="/dashboard">clique aqui</a> para acessar a área de membros</p>
+{{else}}
+    <p>O seu cadastro ainda necessita de aprovação!</p>
 {{/if}}
