--- a/06/views/layouts/main.handlebars
+++ b/06/views/layouts/main.handlebars
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Node.js + MySQL</title>
-    <link rel="stylesheet" href="/css/styles.css">
-  </head>
-  <body>
-    <nav id="navbar">
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Node.js + MySQL</title>
+  <link rel="stylesheet" href="/css/styles.css">
+</head>
+<body>
+  <nav id="navbar">
+    <p id="logo">Logo</p>
+    <div>
       <ul>
         <li><a href="/">Cadastrar</a></li>
-        <li><a href="/books">Livros</a></li>
+        <li><a href="/movies">Filmes</a></li>
       </ul>
-    </nav>
+    </div>
+  </nav>
+  <main id="main-content">
     {{{ body }}}
-  </body>
+  </main>
+  <footer id="footer">
+    <p>&copy; 2025 Projeto Cadastro de Filmes</p>
+  </footer>
+</body>
 </html>
