--- a/06/public/css/styles.css
+++ b/06/public/css/styles.css
@@ -22,6 +22,17 @@ body {
 
 #logo {
   color: white;
+  font-size: 1.5em;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 140px;
+}
+
+#logo img {
+  width: 35px;
+  vertical-align: middle;
 }
 
 #navbar {
@@ -31,10 +42,11 @@ body {
   left: 0;
   z-index: 10;
   padding: 1em 4em;
-  background-color: #5e1111;
+  background: linear-gradient(to right, #5e1111, #2e0e0c);
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-bottom: #fcb249 0.5px solid;
 }
 
 #navbar ul {
@@ -53,7 +65,7 @@ body {
 
 #navbar ul li a:hover {
   text-decoration: none;
-  color: #ffd900;
+  color: #fcb249;
 }
 
 #main-content {
@@ -67,15 +79,16 @@ body {
 
 #footer {
   width: 100%;
-  background: #5e1111;
+  background: linear-gradient(to right, #5e1111, #2e0e0c);
   color: #fff;
   text-align: center;
-  padding: 1em 0;
+  padding: 1em 0em;
   position: fixed;
   left: 0;
   bottom: 0;
   font-size: 1em;
   letter-spacing: 1px;
+  border-top: #fcb249 0.5px solid;
 }
 
 h1 {
@@ -86,12 +99,13 @@ h1 {
 .stars {
   font-size: 2.5em;
   color: black;
+  cursor: default;
 }
 
 .form {
   width: 450px;
   background: linear-gradient(to right, #fcb249, #fdcb6c);
-  padding: 0.5rem 2rem;
+  padding: 0.5rem 0.5rem;
   color: black;
   display: flex;
   flex-direction: column;
@@ -99,6 +113,7 @@ h1 {
   border-radius: 0px 25px 0px 25px;
   border: 5px solid black;
   outline: 8px solid #fdcb6c;
+  box-shadow: 14px 8px 20px 10px #fcb14977;
 }
 
 .form-group {
@@ -111,10 +126,10 @@ h1 {
   width: 100%;
   padding: 0.8em 0.5em 0.5em 0.5em;
   /* altura menor */
-  border: 1px solid #ffd900;
+  border: 1px solid #fdcb6c;
   border-radius: 8px;
   background: #fdcb6c;
-  color: #fff;
+  color: #000;
   font-size: 1em;
   outline: none;
   transition: border-color 0.2s;
@@ -159,10 +174,27 @@ h1 {
   color: #fff;
 }
 
+.btnremove {
+  background: #000000;
+  color: #ffffff;
+  border: none;
+  width: 140px;
+  padding: 0.5em;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 1em;
+  transition: background-color 0.2s, color 0.2s;
+}
+
+.btnremove:hover {
+  background: #5e1111;
+  color: #fff;
+}
+
 .movies-container {
   width: 450px;
-  max-height: 600px;      
-  background: linear-gradient(to right, #fcb249, #fdcb6c);
+  max-height: 600px;
+  background: linear-gradient(to right, #a7a7a7, #f1f1f1);
   padding: 0.5rem 2rem;
   color: black;
   display: flex;
@@ -170,8 +202,9 @@ h1 {
   align-items: center;
   border-radius: 0px 25px 0px 25px;
   border: 5px solid black;
-  outline: 8px solid #fdcb6c;
+  outline: 8px solid #f1f1f1;
   position: relative;
+  box-shadow: 14px 6px 20px 10px #a7a7a77a;
 }
 
 .movies-list::-webkit-scrollbar {
@@ -195,16 +228,22 @@ h1 {
   border-radius: 8px;
 }
 
+.voltar {
+  width: 100%;
+  display: flex;
+
+}
+
 .movies-list {
   width: 100%;
   flex: 1;
-  overflow-y: auto;          
+  overflow-y: auto;
   margin: 1em 0;
 }
 
 .movies-container a {
   text-decoration: none;
-  color: #5e1111;
+  color: #2e0e0c;
 }
 
 .movies-container a:hover {
@@ -223,14 +262,15 @@ h1 {
 
 /* movie */
 #movie-page {
-  padding: 2em;
+  padding: 0em;
+  box-shadow: 8px 8px 20px 10px #fcb14977;
 }
 
 #movie-page .container {
   text-align: center;
-  width: 450px;     
+  width: 450px;
   background: linear-gradient(to right, #fcb249, #fdcb6c);
-  padding: 0.5rem 2rem;
+  padding: 0.5rem 0.5rem 1rem 0.5rem;
   color: black;
   display: flex;
   flex-direction: column;
@@ -241,6 +281,11 @@ h1 {
   position: relative;
 }
 
+.action .btn {
+  text-decoration: none;
+  color: #5e1111;
+}
+
 .actions {
   margin-top: 1em;
   display: flex;
@@ -249,21 +294,39 @@ h1 {
 
 .actions a {
   margin-right: 1em;
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+  transition: color 0.2s;
+  display: flex;
+  align-items: center;
+}
+
+.actions a:hover {
+  color: #2e0e0c;
 }
 
 .btn-back {
   display: inline-block;
   margin-bottom: 1em;
-  background: #5e1111;
   color: #fff;
   padding: 0.5em 1.2em;
   border-radius: 8px;
   text-decoration: none;
   font-weight: bold;
   transition: background 0.2s, color 0.2s;
+  color: #5e1111;
 }
 
 .btn-back:hover {
-  background: #ffd900;
+  color: #5e1111;
+}
+
+.btn-back img {
+  width: 28px;
+  height: 28px;
+}
+
+.btn-back img:hover {
   color: #5e1111;
 }
