--- a/06/views/editmovie.handlebars
+++ b/06/views/editmovie.handlebars
@@ -1,27 +1,28 @@
-
 <form class="form" action="/movies/updatemovie" method="POST">
-<a href="/movies" class="btn-back">Voltar</a>
+  <div class="voltar">
+    <a href="/movies" class="btn-back">Voltar</a>
+  </div>
   <h1>Edite o seu filme:</h1>
   <input type="hidden" name="id" value="{{movie.id}}">
-  <div class="form-control">
-    <label for="title">Título:</label>
-    <input type="text" name="title" placeholder="Título do filme" value="{{movie.title}}">
+  <div class="form-group">
+    <input type="text" name="title" id="title" required placeholder=" " value="{{movie.title}}" />
+    <label for="title">Título do filme</label>
   </div>
-  <div class="form-control">
-    <label for="director">Diretor:</label>
-    <input type="text" name="director" placeholder="Diretor do filme" value="{{movie.director}}">
+  <div class="form-group">
+    <input type="text" name="director" id="director" required placeholder=" " value="{{movie.director}}" />
+    <label for="director">Diretor</label>
   </div>
-  <div class="form-control">
-    <label for="year">Ano de lançamento:</label>
-    <input type="number" name="year" placeholder="Ano de lançamento" value="{{movie.year}}">
+  <div class="form-group">
+    <input type="number" name="year" id="year" required placeholder=" " value="{{movie.year}}" />
+    <label for="year">Ano de lançamento</label>
   </div>
-  <div class="form-control">
-    <label for="genre">Gênero:</label>
-    <input type="text" name="genre" placeholder="Gênero do filme" value="{{movie.genre}}">
+  <div class="form-group">
+    <input type="text" name="genre" id="genre" required placeholder=" " value="{{movie.genre}}" />
+    <label for="genre">Gênero</label>
   </div>
-  <div class="form-control">
-    <label for="duration">Duração (minutos):</label>
-    <input type="number" name="duration" placeholder="Duração em minutos" value="{{movie.duration}}">
+  <div class="form-group">
+    <input type="number" name="duration" id="duration" required placeholder=" " value="{{movie.duration}}" />
+    <label for="duration">Duração (minutos)</label>
   </div>
-  <input type="submit" value="Editar">
+  <input class="btn" type="submit" value="Editar">
 </form>
