--- a/06/views/layouts/main.handlebars
+++ b/06/views/layouts/main.handlebars
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -7,9 +8,10 @@
   <title>Node.js + MySQL</title>
   <link rel="stylesheet" href="/css/styles.css">
 </head>
+
 <body>
   <nav id="navbar">
-    <p id="logo">Logo</p>
+    <p id="logo"><img src="/img/logo.png" alt="logo">CineList</p>
     <div>
       <ul>
         <li><a href="/">Cadastrar</a></li>
@@ -21,7 +23,8 @@
     {{{ body }}}
   </main>
   <footer id="footer">
-    <p>&copy; 2025 Projeto Cadastro de Filmes</p>
+    <p>&copy; 2025 Cadastro de Filmes</p>
   </footer>
 </body>
+
 </html>
