--- a/06/views/movie.handlebars
+++ b/06/views/movie.handlebars
@@ -1,6 +1,8 @@
 <div id="movie-page">
-  <a href="/movies" class="btn-back">Voltar</a>
   <div class="container">
+    <div class="voltar">
+    <a href="/movies" class="btn-back">Voltar</a>
+    </div>
     <h1>{{movie.title}}</h1>
     <p><strong>Diretor:</strong> {{movie.director}}</p>
     <p><strong>Ano de lançamento:</strong> {{movie.year}}</p>
@@ -9,7 +11,7 @@
     <div class="actions">
       <a href="/movies/edit/{{movie.id}}">Editar</a>
       <form action="/movies/remove/{{movie.id}}" method="POST">
-        <input type="submit" value="Remover">
+        <input type="submit" value="Remover" class="btnremove" >
       </form>
     </div>
   </div>
